--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <nav class="navbar navbar-expand-lg">
                   <div class="container-fluid">
-                        <a class="navbar-brand text-uppercase text-light" href="#">satt <span class="text-primary">it</span></a>
+                        <a class="navbar-brand text-uppercase text-light" href="#">Car <span class="text-primary">Park</span></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"><i class="fal fa-align-right text-white fs-1"></i></span>
                         </button>
